--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,13 +31,13 @@
                 </div>
                 <div class="search">
                     <div class="searchbar closed">
-                        <a href="#" onclick="toggleSearch(true)"><img class="svg" src="./img/ic_search_black_24px.svg"><img></a>
+                        <a href="#" onclick="toggleSearch(true)"><img class="svg" alt="search icon" src="./img/ic_search_black_24px.svg"></a>
                         <div class="inner">
                             <input id="game-search" type=text name=s autocomplete="off" placeholder="Search for game...">
                             <ul class="search-results"></ul>
                         </div>                
                     </div>
-                    <a class="close" href="#" onclick="toggleSearch(false)"><img class="svg" src="./img/ic_close_black_24px.svg"></img></a>
+                    <a class="close" href="#" onclick="toggleSearch(false)"><img class="svg" alt="close icon" src="./img/ic_close_black_24px.svg"></a>
                     <div class="block"></div>
                 </div>
             </header>
@@ -122,7 +122,7 @@
                     </div>
                     <div id="foobar-game" class="game-article" data-article_name="Foobar Game">
                         <div class="back_arrow">
-                            <img class="svg" src="./img/ic_arrow_back_black_24px.svg">
+                            <img class="svg" alt="back icon" src="./img/ic_arrow_back_black_24px.svg">
                         </div>
                         <div class="article-content">
                             <div class="aside-left">
@@ -190,7 +190,7 @@
                     </div>
                     <div id="bizbar-game" class="game-article" data-article_name="Bizbar Game">
                         <div class="back_arrow">
-                            <img class="svg" src="./img/ic_arrow_back_black_24px.svg">
+                            <img class="svg" alt="back icon" src="./img/ic_arrow_back_black_24px.svg">
                         </div>
                         <div class="article-content">
                             <div class="aside-left">
@@ -258,7 +258,7 @@
                     </div>
                     <div id="lorem-game" class="game-article" data-article_name="Lorem Game">                        
                         <div class="back_arrow">
-                            <img class="svg" src="./img/ic_arrow_back_black_24px.svg">
+                            <img class="svg" alt="back icon" src="./img/ic_arrow_back_black_24px.svg">
                         </div>
                         <div class="article-content">
                             <div class="aside-left">
@@ -326,7 +326,7 @@
                     </div>
                     <div id="grillkorv-game" class="game-article" data-article_name="Grillkorv Game">                        
                         <div class="back_arrow">
-                            <img class="svg" src="./img/ic_arrow_back_black_24px.svg">
+                            <img class="svg" alt="back icon" src="./img/ic_arrow_back_black_24px.svg">
                         </div>
                         <div class="article-content">
                             <div class="aside-left">
